fix regex issue

--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <doctype html>
 
 <script type="module">
-import getSVGColors from './dist/get-svg-colors-browser.es.js';
+import getSVGColors from './dist/get-svg-colors.es.js';
 
 // Give it an SVG filename
 getSVGColors('test/fixtures/australia.svg', { flat: true } )
