--- a/example.html
+++ b/example.html
@@ -1,32 +1,24 @@
 <doctype html>
-
-<script type="module">
-import getSVGColors from './dist/get-svg-colors.es.js';
+<head>
+	<meta charset="utf-8" />
+	<style>img, svg { display: block; max-height: 50vh }</style>
+</head>
+<body>
+	<p>Look at the console.</p>
+	<img src="test/fixtures/australia.svg">
+	<svg viewBox="0 0 553 96.5"><rect width="20" height="20" x="2" y="23" fill="red" stroke="green" /></svg>
+	<script type="module">
+import getSVGColors from './dist/get-svg-colors-browser.es.js';
 
 // Give it an SVG filename
 getSVGColors('test/fixtures/australia.svg', { flat: true } )
 	.then( colors => {
 		console.log( 'australia colors:', colors );
-		// {
-		//  fills: [
-		//   "#DAF0FD",
-		//   "#FFF8E3",
-		//   "#FFDBC2",
-		//   "#F4E2BA",
-		//   "#FDF9D2",
-		//   "#A0C6E9",
-		//   "#FF0503"
-		//  ],
-		//  strokes: [
-		//   "#000000",
-		//   "#27AAEA"
-		//  ],
-		//  stops: []
-		// }
 	} );
 
 getSVGColors( '<svg viewBox="0 0 553 96.5"><rect width="20" height="20" x="2" y="23" fill="red" stroke="green" /></svg>')
 	.then( colors => {
 		console.log( 'rect colors', colors );
 	} )
-</script>
+	</script>
+</body>
